# ClipCC-Android

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp-tokenizer/: Cargo.toml
app/src/main/cpp-tokenizer/src/: lib.rs
docs/: HANDOFF-classify-ui-results.md  HANDOFF-pixel9a-precision.md
docs/memory/: clipcc-android-port.md  clipcc-android-review-discipline.md
docs/plans/: 2026-06-03-clipcc-android-phase0-assets-and-spikes.md  2026-06-03-clipcc-android-phase1-engine.md  2026-06-03-clipcc-android-phase2-benchmark.md  2026-06-03-clipcc-android-ui.md  2026-06-29-clipcc-android-classify-results-redesign-plan.md  2026-06-29-clipcc-android-csv-label-import-plan.md  2026-06-29-clipcc-android-pixel9a-precision-plan.md  2026-06-29-clipcc-android-pixel9a-precision-report.md  2026-07-01-clipcc-android-pixel9a-benchmark-tab-plan.md  phase0-spike-results.md  phase1-RESUME.md  phase1-report.md  phase2-benchmark-result.json  phase2-report.md  phase3-handoff.md  phase3-report.md  spikeA-pixel9a-g4-benchmark-result.json  spikeA-pixel9a-g4-cpu-baseline.md  spikeB-device-latency.md  spikeB-host-parity.md
docs/specs/: 2026-06-02-clipcc-android-design.md  2026-06-03-clipcc-android-phase2-benchmark-design.md  2026-06-03-clipcc-android-ui-design.md  2026-06-29-clipcc-android-classify-results-redesign-design.md  2026-06-29-clipcc-android-csv-label-import-design.md  2026-06-29-clipcc-android-pixel9a-precision-design.md  2026-07-01-clipcc-android-pixel9a-benchmark-tab-design.md
gradle/: libs.versions.toml
(+85 files in other folders)
