[package]
name = "hftokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "hftokenizer"

[dependencies]
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
jni = "0.21.1"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
